--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.15.0",
     "sweetalert2": "^8.13.4",
     "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
     "vue-firestore": "^0.3.22",
     "vue-router": "^3.0.3",
     "vue2-editor": "^2.9.1"
